[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechanicsdsl-unity"
version = "0.1.0"
description = "Unity and Unreal Engine plugin packages for MechanicsDSL — physically accurate simulation components compiled from DSL notation"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Noah Parsons", email = "nomapa223@gmail.com" }
]
keywords = [
  "unity", "unreal-engine", "game-engine", "physics simulation",
  "MechanicsDSL", "digital-twin", "Lagrangian mechanics"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Games/Entertainment",
]
requires-python = ">=3.9"
dependencies = [
  "mechanicsdsl-core",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[project.scripts]
mechanicsdsl-unity = "mechanicsdsl_unity.cli:main"

[project.urls]
Homepage = "https://github.com/MechanicsDSL/mechanicsdsl-unity"
Repository = "https://github.com/MechanicsDSL/mechanicsdsl-unity"
DOI = "https://doi.org/10.5281/zenodo.17771040"

[tool.hatch.build.targets.wheel]
packages = ["src/mechanicsdsl_unity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
